--- a/singlePlayer/templates/game/cabinet.html
+++ b/singlePlayer/templates/game/cabinet.html
@@ -24,7 +24,7 @@
                 {% if soldiers %}
                 <h2 class="title">Promotional troops</h2>
                 {% for soldier in soldiers %}
-                <li class="soldier_ids">Soldier ID: {{ soldier.id }}
+                <li class="soldier_ids" id="sd{{ soldier.id }}">Soldier ID: {{ soldier.id }}
                     <br>Killed Soldier: {{ soldier.killed_units }}
                     <button class="btn btn-success promote" data-promote="{{ soldier.id }}">Give promotion</button>
                 </li>
