--- a/singlePlayer/templates/singlePlayer/choose.html
+++ b/singlePlayer/templates/singlePlayer/choose.html
@@ -10,7 +10,13 @@
         <div class="col">
             <h1 class="headers" id="title">Choose Your Team</h1>
         </div>
-        <div class="col"></div>
+        <div class="col">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" id="c_instr"
+                class="bi bi-info-square-fill help" viewBox="0 0 16 16">
+                <path style="cursor: pointer;"
+                    d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.93 4.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
+            </svg>
+        </div>
     </div>
     <div class="row">
         {% for team in teams %}
@@ -32,10 +38,22 @@
             <span id="sp{{ team.id }}"></span>
             <button class="btn btn-success see" data-team="{{ team.id }}">See the Generals</button>
             <a href="{% url 'new_choose' team.id %}" class="btn btn-danger take">Take Team</a>
-
-
         </div>
         {% endfor %}
+        <div class="col" id="choose_instr" style="display: none;">
+            <h3 id="instr-head">Instructions</h3>
+            <ul id="instr">
+                <li><b>Star</b> and <b>Patriot</b> are competitive friends
+                    while Jungle Warriors and Gangstars are neutral to each other.</li>
+                <li>You can see the generals by clicking <b>See the Generals</b> option</li>
+                <li>Click <b>Take Team</b> to take a team</li>
+                <li>Every time when you come here and choose a team,
+                    your previously choosed team and your saved progress with
+                    that team will be deleted.
+                </li>
+            </ul>
+            <button class="btn btn-danger" id="close_instr">Close</button>
+        </div>
     </div>
 </div>
 {% endblock body %}
