Removed complexity in starting game

--- a/singlePlayer/templates/game/cabinet.html
+++ b/singlePlayer/templates/game/cabinet.html
@@ -56,10 +56,7 @@
         </div>
         <div class="col">
             <br><br><br><br><br><br>
-            <a href="{% url 'game' %}" class="btn btn-danger" id="start">Start Game</a>
-            {% if opponent %}
-            <a href="{% url 'con' %}" class="btn btn-danger" id="con">Continue</a>
-            {% endif %}
+            <a href="{% url 'game' %}" class="btn btn-danger" id="start">Play</a>
             <a href="{% url 'shop' %}" class="btn btn-success" id="shop">Go to Shop</a>
         </div>
         <br><br>
