--- a/singlePlayer/templates/buildings/promote_room.html
+++ b/singlePlayer/templates/buildings/promote_room.html
@@ -1,12 +1,9 @@
-{% extends 'game/layout.html' %}
+{% extends 'buildings/layout.html' %}
 {% load static %}
-{% block title %}Cabinet{% endblock title %}
 {% block body %}
 
 <div class="container" id="generals_cabinet">
     <div class='row'>
-
-
     </div>
     <div class="row">
         <div class="col"><br>
@@ -21,7 +18,6 @@
         <div class="col"><br><br>
             <ul>
                 <h2 class="title">Promotional troops</h2>
-
                 {% if not soldiers %}
                 <li class="general_attributes">No soldier is eligible for promotion</li>
                 {% else %}
@@ -39,20 +35,12 @@
                     <h6>Use the default image url. To do that,right-click on a general's cap image, copy the address of
                         the cap image
                         and paste it.</h6>
-
                     <button class="btn btn-success" id='promote{{ soldier.id }}'
                         data-promotion="{{ soldier.id }}">Promote</button>
                 </form>
                 {% endfor %}
                 {% endif %}
-
-
-
-
-
-
             </ul>
-
         </div>
         <div class="col">
             <br><br><br><br><br><br>
