--- a/singlePlayer/templates/game/layout.html
+++ b/singlePlayer/templates/game/layout.html
@@ -40,7 +40,7 @@
     </div>
     <nav class="navbar navbar-light" style="background-color: rgb(198, 168, 226);">
         <a href='#' class='user-attr top_link'
-            style="font-family:'Nanum Gothic', sans-serif;text-decoration: none;">Capricious Trigger</a><br>
+            style="font-family:'Nanum Gothic', sans-serif;text-decoration: none;">Capstone</a><br>
         <span class="user-attr">{{ user }}</span>
         <span class="user-attr">Team: {{ user.team.name }}</span>
         <span class="user-attr">Level: {{ user.levels }}</span>
