--- a/singlePlayer/templates/singlePlayer/index.html
+++ b/singlePlayer/templates/singlePlayer/index.html
@@ -20,7 +20,9 @@
                 <a href="{% url 'choose' %}" style="text-decoration: none;">
                     <h4 class=" game_options">New Game</h4>
                 </a>
-
+                <a href="{% url 'credits' %}" style="text-decoration: none;">
+                    <h4 class=" game_options">Credits</h4>
+                </a>
                 <a href="{% url 'logout' %}" style="text-decoration: none;">
                     <h4 class="game_options">Sign Out</h4>
                 </a>
